Project refactoring and logging added up ..